--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,16 +9,17 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
-	<script src="script.js"></script>
+	<script src="script.js" defer></script>
+	<script src="https://kit.fontawesome.com/2310b303b3.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <header>
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
 		<ul>
-			<li>projets</li>
-			<li>contact</li>
-			<li>login</li>
+			<li><a href="/FrontEnd/index.html#projets">projets</a></li>
+			<li><a href="/FrontEnd/index.html#contacts">contact</a></li>
+			<li class="login"><a href="/FrontEnd/login.html">login</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
@@ -37,14 +38,16 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
+		<a href="#modal1" class="js-modal"><i class="fa-solid fa-pen-to-square"></i>Modifier</a>
+		<a name="projets"></a>
 		<div class="filtres">
-			<div>Tous</div>
 		</div>
 		<div class="gallery">
 		</div>
 	</section>
 	<section id="contact">
 		<h2>Contact</h2>
+		<a name="contacts"></a>
 		<p>Vous avez un projet ? Discutons-en !</p>
 		<form action="#" method="post">
 			<label for="name">Nom</label>
@@ -55,6 +58,15 @@
 			<textarea name="message" id="message" cols="30" rows="10"></textarea>
 			<input type="submit" value="Envoyer">
 		</form>
+		<aside id="modal1" class="modal" aria-hidden="true" role="dialog" aria-modal="false" aria-labelledby="modification-gallery" style="display: none;">
+			<div class="modal-wrapper js-modal-stop">
+				<div class="close-button-modal"><button class="js-modal-close"><i class="fa-solid fa-xmark"></i></button></div>
+				<h3 id= "modification-gallery">Galerie photo</h2>
+				<div class="gallery-modal"></div>
+				<hr>
+				<button class="addPicture">Ajouter une photo</button>
+			</div>
+		</aside>
 	</section>
 </main>
 
