--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -37,9 +37,9 @@
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
-		<a href="#modal1" class="js-modal"><i class="fa-solid fa-pen-to-square"></i>Modifier</a>
-		<a name="projets"></a>
+		<div class="mesProjets-container">
+			<h2 class="mesProjets">Mes Projets</h2>
+		</div>
 		<div class="filtres">
 		</div>
 		<div class="gallery">
@@ -76,24 +76,27 @@
 					</div>
 					<h3 id= "modification-gallery">Ajout photo</h2>
 					<div class="div-add-photo">
-						<form action="#" method="post">
+						<form action="#" method="post" id="photoForm">
+							<div id="photo-container"></div>
 							<div class="add-picture-button">
 								<i class="fa-regular fa-image"></i>
-								<label for="file"><button>+ Ajouter Photo</button></label>
-								<input type="file" id="file" name="file" accept="image/png, image/jpg">
-								<p>jpg. png : 4mo max
-							</div>
+								<label for="fileInput">+ Ajouter Photo</label>
+								<input type="file" id="fileInput" name="file" accept="image/png, image/jpeg" style="display: none;" required/>
+								<p>jpg. png : 4mo max</p>
+							</div >
 							<label for="title">Titre</label>
-							<input type="text" name="title" id="title">
+							<input type="text" name="title" id="title" required>
 							<label for="category">Catégorie</label>
 							<select name="category" id="category" size="1">
-								<option value="objet">Objets</option>
-								<option value="appartement">Appartements</option>
-								<option value="hotel">Hotels & restaurants</option>
+								<option value="1">Objets</option>
+								<option value="2">Appartements</option>
+								<option value="3">Hotels & restaurants</option>
 							</select>
+							<p id="errorMessage"></p>
+							<hr>
+							<button class="addPicture" id="addPicture">Valider</button>
 						</form>
-						<hr>
-						<button class="addPicture">Valider</button>
+
 					</div>
 				</div>
 			</div>
